[package]
name = "D011"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27.7", features = ["aws-lc-rs", "ring"] }
rustls = "0.23.37"
futures-util = "0.3.32"
rand = "0.10.0"
infer = "0.19.0"

